src/objects/zaapit__View_Style__c.object
<CustomObject>
    <fields>
        <fullName>zaapit__Field_Style__c</fullName>
        <label>Field Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__Field_To_Color__c</fullName>
        <label>Field To Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__Row_Style__c</fullName>
        <label>Row Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__SOQL__c</fullName>
        <label>SOQL Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Style_Description__c</fullName>
        <label>Style Description</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__ViewID__c</fullName>
        <label>ViewID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__css__c</fullName>
        <label>Css</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>View Style</label>
    <nameField>
        <displayFormat>styleview{0000}</displayFormat>
        <label>Style Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>View Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>